Fixes full aligned groups, and no-header, no-title page template styles

--- a/scss/_wp.scss
+++ b/scss/_wp.scss
@@ -23,6 +23,8 @@
 .alignfull {
 	margin-left: calc(50% - 50vw);
     margin-right: calc(50% - 50vw);
+	max-width: 100vw;
+	width: 100vw;
 }
 
 .alignwide {
@@ -227,8 +229,9 @@ figure.wp-block-image {
 	@include make-block( $white-space );
 
 	&.alignfull {
-		padding-left: 0 !important;
-		padding-right: 0 !important;
+		margin-bottom: 0;
+		margin-top: 0;
+		padding: 0 !important;
 
 		.wp-block-group__inner-container {
 			@include make-container( $content-full-wrap-max-width, $gutter-width / 2 );
